<resources>
    <string name="app_name" translatable="false">VPN Gate Connector</string>
    <string name="home" translatable="false">Home</string>
    <string name="paid_server">Paid Server</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="filter_server_protocol">Show server with protocol</string>
    <string name="filter_all_countries">All countries</string>
    <string name="reset">Reset</string>
    <string name="show_tcp_server">TCP Server</string>
    <string name="show_udp_server">UDP Server</string>
    <string name="show_l2tp_server">L2TP Server</string>
    <string name="show_sstp_server">MS-SSTP Server</string>
    <string name="must_check_at_least_1_protocol">You must check at least 1 server protocol to continue</string>
    <string-array name="number_filter_operator">
        <item>equal (=)</item>
        <item>greater than (&gt;)</item>
        <item>greater or equal (&gt;=)</item>
        <item>less than (&lt;)</item>
        <item>less than or equal (&lt;=)</item>
    </string-array>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="speed">Speed</string>
    <string name="hostname">Hostname</string>
    <string name="score">Score</string>
    <string name="score_short">Score</string>
    <string name="ping">Ping</string>
    <string name="session">Session</string>
    <string name="max_session">Max Session</string>
    <string name="domain">Domain</string>
    <string name="good">Good</string>
    <string name="medium">Normal</string>
    <string name="full">Full</string>
    <string name="uptime">Uptime</string>
    <string name="owner">Owner</string>
    <string name="tcp_port" translatable="false">TCP</string>
    <string name="udp_port" translatable="false">UDP</string>
    <string name="l2tp_support">L2TP Support</string>
    <string name="l2tp_supported">Yes</string>
    <string name="sstp_support">MS-SSTP Support</string>
    <string name="ms_sstp">MS-SSTP</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="cancel_connection">Disconnect</string>
    <string name="pauseVPN">Pause VPN</string>
    <string name="resumevpn">Resume VPN</string>
    <string name="state_connected">Connected</string>
    <string name="connection_error">Error when trying get data from server. Tap to try again!</string>
    <string name="no_network">Your device is not connect to any network\nPlease connect any wifi or enable mobile data to continue</string>
    <string name="loading_text">App is fetching data from server\nPlease wait in a moment</string>
    <string name="search_hint">Country, IP, Hostname, Operator</string>
    <string name="to_top">Back to top</string>
    <string name="country">Country</string>
    <string name="sort_property">Sort by</string>
    <string name="sort_type">Sort type</string>
    <string name="sort_asc">Ascending</string>
    <string name="sort_desc">Descending</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="feature_not_available">You can\'t do this action at this moment</string>
    <string name="enable_notification_speed">Enable speed/statistics in notify</string>
    <string name="setting_startup_screen">Startup screen</string>
    <string-array name="startup_screen">
        <item>List screen</item>
        <item>Status screen</item>
    </string-array>
    <string name="setting_startup_screen_subtitle">Choose startup screen after app start with at least connection success.\nIf no connection success before list screen always display.\nStartup screen also display when tap to notification.</string>
    <string name="enable_notification_speed_hint">Display speed/statistics in notification. If turn off only connect status display in notification and battery usage may fewer.</string>
    <string name="setting_cache_label">Cache save time</string>
    <string name="setting_cache_subtitle">Is the time data will save in device after get data from server</string>
    <string name="setting_cache_auto_clear_label">Cache will auto clear at:</string>
    <string name="setting_cache_clear">Clear now</string>
    <string name="setting_clear_cache_success">Clear cache success</string>
    <string name="setting_clear_cache_error">Some thing when wrong. Cache can\'t clear</string>
    <string-array name="setting_cache_time">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hours</item>
        <item>2 hours</item>
        <item>4 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
    </string-array>
    <string name="press_back_again_to_exit">Please click BACK again to exit</string>
    <string name="setting_default_protocol">Default protocol</string>
    <string name="setting_protocol_subtitle">Default protocol to connect when server has both TCP and UDP protocol</string>
    <string-array name="list_protocol">
        <item>Always ask</item>
        <item>TCP</item>
        <item>UDP</item>
    </string-array>
    <string name="total_user">Total user</string>
    <string name="total_traffic">Total traffic</string>
    <string name="log_type">Log type</string>
    <string name="connect_to_this_server">Connect to this server</string>
    <string name="install_openvpn">Install OpenVPN Connect</string>
    <string name="save_config_file">Save OpenVPN config file</string>
    <string name="saved_ovpn_file_in">Saved ovpn file in %1$s. Import to OpenVPN Connect to use it</string>
    <string name="connect_via_l2tp">Connect via L2TP VPN</string>
    <string name="connect_via_sstp">Connect via MS-SSTP</string>
    <string name="connect_use_protocol">Connect use protocol:</string>
    <string name="retry_connect">Retry connect</string>
    <string name="vpn_auth_failure">Auth failure</string>
    <string name="connecting">Connecting…</string>
    <string name="sstp_connecting">Connecting MS-SSTP…</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnect_sstp">Disconnect MS-SSTP</string>
    <string name="cancel_sstp">Cancel MS-SSTP</string>
    <string name="disconnecting">Disconnecting…</string>
    <string name="sstp_disconnecting">Disconnecting MS-SSTP…</string>
    <string name="sstp_disconnected">Disconnected MS-SSTP</string>
    <string name="sstp_connected">Connected MS-SSTP with IP: %1$s</string>
    <string name="sstp_disconnected_by_error">Disconnected MS-SSTP because of error or by outside problem</string>
    <string name="canceled">Canceled</string>
    <string name="copy_ip">Copy IP to clipboard</string>
    <string name="copy_hostname">Copy HostName to clipboard</string>
    <string name="copied">Copied</string>
    <string name="connecting_use_protocol">Connecting to VPN server use [%1$s] protocol.</string>
    <string name="unknown_state">Unknown</string>
    <string name="state_user_vpn_permission" translatable="false">Waiting for user permission to use VPN API</string>
    <string name="check_ip">Check your current public IP</string>
    <string name="about_html">%1$s is an application allow connection to free VPN server by volunteer around the world from VPN Gate open source project. More information about VPN Gate project in link bellow.</string>
    <string name="license_html">%1$s use a part of ICS OpenVPN and Open SSTP Client for Android code as library. See full license in link bellow.</string>
    <string name="vpn_gate_link" translatable="false">http://www.vpngate.net/en/about_overview.aspx</string>
    <string name="version">Version:</string>
    <string name="license_label" translatable="false">ICS OpenVPN</string>
    <string name="license_link" translatable="false">https://github.com/schwabe/ics-openvpn/blob/master/doc/LICENSE.txt</string>
    <string name="license_sstp_label" translatable="false">Open SSTP Client for Android</string>
    <string name="license_sstp_link" translatable="false">https://github.com/kittoku/Open-SSTP-Client/blob/main/LICENSE</string>
    <string name="license">License</string>
    <string name="operator_message">Operator message</string>
    <string name="hide_op_message_5time">Hide all message next 5 connect time</string>
    <string name="close">Close</string>
    <string name="name_hint">Your name. Minimum %1$d character</string>
    <string name="content_hint">What you need help?\nMinimum %1$d character</string>
    <string name="btn_send">Send</string>
    <string name="name_error_message">Name must be longer than %1$d character</string>
    <string name="content_error_message">Content must be longer than %1$d character</string>
    <string name="uploaded_data">Uploaded</string>
    <string name="downloaded_data">Downloaded</string>
    <string name="help_request_from">[VPN]Help request from: </string>
    <string name="send_email">Send email</string>
    <string name="email_error_fix">Please check correct error first</string>
    <string name="error_load_profile">Error load VPN profile</string>
    <string name="traffic_session">Session traffic</string>
    <string name="clear_statistics">Clear statistics</string>
    <string name="connected_duration">Connected</string>
    <string name="total_downloaded">Total downloaded</string>
    <string name="status_pill_connected">Connected</string>
    <string name="status_pill_connecting">Connecting…</string>
    <string name="status_pill_disconnected">Disconnected</string>
    <string name="server_list_never_updated">Server list not synced yet</string>
    <string name="server_list_updated_at">Server list updated: %1$s</string>
    <string name="setting_theme_label">Theme</string>
    <string name="setting_language_label">Language</string>
    <string-array name="setting_theme_options">
        <item>Follow system</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="setting_language_options">
        <item>Follow system</item>
        <item>English</item>
        <item>فارسی</item>
    </string-array>
    <string name="setting_dns_preset_label">Quick DNS presets</string>
    <string-array name="setting_dns_presets">
        <item>Custom</item>
        <item>Shecan (178.22.122.100)</item>
        <item>Electro (78.157.42.100)</item>
        <item>Cloudflare (1.1.1.1)</item>
        <item>Google (8.8.8.8)</item>
        <item>OpenDNS (208.67.222.222)</item>
    </string-array>
    <string name="log_console_title">Connection log</string>
    <string name="log_console_empty">No log messages yet</string>
    <string name="log_console_clear">Clear</string>
    <string name="bookmark_toggle">Bookmark this server</string>
    <string name="bookmark_offline">Bookmarked - currently offline</string>
    <string name="bookmark_added">Server bookmarked</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="ping_test">Test ping now</string>
    <string name="ping_testing">Testing…</string>
    <string name="ping_test_failed">Unreachable</string>
    <string name="bookmarks_filter_label">Bookmarks</string>
    <string name="exclude_apps_settings_label">Excluded apps</string>
    <string name="manage_button">Manage</string>
    <string name="auto_connect_timeout_label">Auto-Connect timeout</string>
    <string name="empty_search_result">No sever found with keyword \"%1$s\"</string>
    <string name="exclude_app_description">Selected apps will bypass the VPN tunnel and use your regular internet connection</string>
    <string name="search_apps_hint">Search apps...</string>
</resources>