<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dashSlate950">

    <TextView
        android:id="@+id/txt_last_updated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/dashSlate900"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/server_list_never_updated"
        android:textColor="@color/dashSlate300"
        android:textSize="11sp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/ln_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txt_last_updated"
        android:layout_above="@id/ln_home_log_console">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_connection"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <TextView
        android:id="@+id/txt_empty"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txt_last_updated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:visibility="gone"
        android:textColor="@color/dashSlate300"
        android:text="@string/empty_search_result" />
    <ImageView
        android:id="@+id/btn_to_top"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_above="@id/ln_home_log_console"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/to_top"
        android:focusable="true"
        android:src="@drawable/ic_to_top_black"
        android:visibility="gone" />

    <!-- Multi-module connection log console (SoftEther/OpenVPN/MS-SSTP) -->
    <LinearLayout
        android:id="@+id/ln_home_log_console"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/dashSlate900"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ln_home_log_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/log_console_title"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_clear_home_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="6dp"
                android:text="@string/log_console_clear"
                android:textColor="@color/dashCyan500"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_home_log_toggle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_expand_more" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_home_log_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:visibility="gone">

            <ScrollView
                android:id="@+id/scroll_home_log"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/dashSlate950"
                android:padding="8dp"
                android:scrollbars="vertical">

                <TextView
                    android:id="@+id/txt_home_log_console"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/log_console_empty"
                    android:textColor="@color/dashEmerald400"
                    android:textIsSelectable="true"
                    android:textSize="10sp" />
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
